--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -879,11 +879,11 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Cornets. Enter <b epub:type="z3998:persona">King Henry VIII</b>, leaning on <b epub:type="z3998:persona">Cardinal Wolsey’s</b> shoulder, the Nobles, and <b epub:type="z3998:persona">Lovell</b>; <b epub:type="z3998:persona">Cardinal Wolsey</b> places himself under <b epub:type="z3998:persona">King Henry VIII’s</b> feet on his right side.</i>
+								<i epub:type="z3998:stage-direction">Cornets. Enter <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b>, leaning on <b epub:type="z3998:persona">Cardinal Wolsey’s</b> shoulder, the Nobles, and <b epub:type="z3998:persona">Lovell</b>; <b epub:type="z3998:persona">Cardinal Wolsey</b> places himself under <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span>’s</b> feet on his right side.</i>
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>My life itself, and the best heart of it,</span>
@@ -907,7 +907,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A noise within, crying “Room for the Queen!” Enter <b epub:type="z3998:persona">Queen Katherine</b>, ushered by <b epub:type="z3998:persona">Norfolk</b>, and <b epub:type="z3998:persona">Suffolk</b>: she kneels. <b epub:type="z3998:persona">King Henry VIII</b> riseth from his state, takes her up, kisses and placeth her by him.</i>
+								<i epub:type="z3998:stage-direction">A noise within, crying “Room for the Queen!” Enter <b epub:type="z3998:persona">Queen Katherine</b>, ushered by <b epub:type="z3998:persona">Norfolk</b>, and <b epub:type="z3998:persona">Suffolk</b>: she kneels. <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> riseth from his state, takes her up, kisses and placeth her by him.</i>
 							</td>
 						</tr>
 						<tr>
@@ -915,7 +915,7 @@
 							<td>Nay, we must longer kneel: I am a suitor.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Arise, and take place by us: half your suit</span>
@@ -945,7 +945,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Lady mine, proceed.</td>
 						</tr>
 						<tr>
@@ -1003,7 +1003,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Taxation!</span>
@@ -1057,7 +1057,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Still exaction!</span>
@@ -1103,7 +1103,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>By my life,</span>
@@ -1161,7 +1161,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Things done well,</span>
@@ -1233,7 +1233,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>It grieves many:</span>
@@ -1289,7 +1289,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Speak freely.</td>
 						</tr>
 						<tr>
@@ -1339,7 +1339,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Speak on:</span>
@@ -1363,7 +1363,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>What was that Hopkins?</td>
 						</tr>
 						<tr>
@@ -1379,7 +1379,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>How know’st thou this?</td>
 						</tr>
 						<tr>
@@ -1449,7 +1449,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Let him on.</span>
@@ -1485,7 +1485,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Ha! what, so rank? Ah ha!</span>
@@ -1499,7 +1499,7 @@
 							<td>I can, my liege.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Proceed.</td>
 						</tr>
 						<tr>
@@ -1515,7 +1515,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>I remember</span>
@@ -1547,7 +1547,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>A giant traitor!</td>
 						</tr>
 						<tr>
@@ -1565,7 +1565,7 @@
 							<td>God mend all!</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>There’s something more would out of thee; what say’st?</td>
 						</tr>
 						<tr>
@@ -1589,7 +1589,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>There’s his period,</span>
@@ -2267,7 +2267,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Hautboys. Enter <b epub:type="z3998:persona">King Henry VIII</b> and others, as masquers, habited like shepherds, ushered by the <b epub:type="z3998:persona">Chamberlain</b>. They pass directly before <b epub:type="z3998:persona">Cardinal Wolsey</b>, and gracefully salute him.</i>
+								<i epub:type="z3998:stage-direction">Hautboys. Enter <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> and others, as masquers, habited like shepherds, ushered by the <b epub:type="z3998:persona">Chamberlain</b>. They pass directly before <b epub:type="z3998:persona">Cardinal Wolsey</b>, and gracefully salute him.</i>
 							</td>
 						</tr>
 						<tr>
@@ -2304,12 +2304,12 @@
 									<br/>
 									<span>They have done my poor house grace; for which I pay ’em</span>
 									<br/>
-									<span>A thousand thanks, and pray ’em take their pleasures. <i epub:type="z3998:stage-direction">They choose Ladies for the dance. <b epub:type="z3998:persona">King Henry VIII</b> chooses <b epub:type="z3998:persona">Anne</b>.</i></span>
+									<span>A thousand thanks, and pray ’em take their pleasures. <i epub:type="z3998:stage-direction">They choose Ladies for the dance. <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> chooses <b epub:type="z3998:persona">Anne</b>.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>The fairest hand I ever touch’d! O beauty,</span>
@@ -2375,7 +2375,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Ye have found him, cardinal: <i epub:type="z3998:stage-direction">Unmasking.</i></span>
@@ -2399,7 +2399,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>My lord chamberlain,</span>
@@ -2419,7 +2419,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>By heaven, she is a dainty one. Sweetheart,</span>
@@ -2457,7 +2457,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>I fear, too much.</td>
 						</tr>
 						<tr>
@@ -2471,7 +2471,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Lead in your ladies, every one: sweet partner,</span>
