--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -850,14 +850,14 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Norfolk</td>
-							<td>Thanks, my good lord chamberlain. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Chamberlain</b>; and <b epub:type="z3998:persona">King Henry VIII</b> draws the curtain, and sits reading pensively.</i></td>
+							<td>Thanks, my good lord chamberlain. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Chamberlain</b>; and <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> draws the curtain, and sits reading pensively.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Suffolk</td>
 							<td>How sad he looks! sure, he is much afflicted.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Who’s there, ha?</td>
 						</tr>
 						<tr>
@@ -865,7 +865,7 @@
 							<td>Pray God he be not angry.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Who’s there, I say? How dare you thrust yourselves</span>
@@ -891,7 +891,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Ye are too bold:</span>
@@ -941,7 +941,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td><i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">Norfolk</b> and <b epub:type="z3998:persona">Suffolk</b>.</i> We are busy; go.</td>
 						</tr>
 						<tr>
@@ -1007,7 +1007,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>And once more in mine arms I bid him welcome,</span>
@@ -1037,7 +1037,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Two equal men. The queen shall be acquainted</span>
@@ -1061,7 +1061,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Ay, and the best she shall have; and my favour</span>
@@ -1107,7 +1107,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Come hither, Gardiner. <i epub:type="z3998:stage-direction">Walks and whispers.</i></td>
 						</tr>
 						<tr>
@@ -1181,7 +1181,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Deliver this with modesty to the queen. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Gardiner</b>.</i></span>
@@ -1641,7 +1641,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Trumpets, sennet, and cornets. Enter two Vergers, with short silver wands; next them, two <b epub:type="z3998:persona">Scribes</b>, in the habit of doctors; after them, <b epub:type="z3998:persona">CANTERBURY</b> alone; after him, <b epub:type="z3998:persona">LINCOLN</b>, Ely, Rochester, and Saint Asaph; next them, with some small distance, follows a Gentleman bearing the purse, with the great seal, and a cardinal’s hat; then two Priests, bearing each a silver cross; then a Gentleman-usher bare-headed, accompanied with a <b epub:type="z3998:persona">Sergeant-at-arms</b> bearing a silver mace; then two <b epub:type="z3998:persona">Gentlemen</b> bearing two great silver pillars; after them, side by side, <b epub:type="z3998:persona">Cardinal Wolsey</b> and <b epub:type="z3998:persona">Cardinal Campeius</b>; two Noblemen with the sword and mace. <b epub:type="z3998:persona">King Henry VIII</b> takes place under the cloth of state; <b epub:type="z3998:persona">Cardinal Wolsey</b> and <b epub:type="z3998:persona">Cardinal Campeius</b> sit under him as judges. <b epub:type="z3998:persona">Queen Katherine</b> takes place some distance from <b epub:type="z3998:persona">King Henry VIII</b>. The Bishops place themselves on each side the court, in manner of a consistory; below them, the <b epub:type="z3998:persona">Scribes</b>. The Lords sit next the Bishops. The rest of the Attendants stand in convenient order about the stage.</i>
+								<i epub:type="z3998:stage-direction">Trumpets, sennet, and cornets. Enter two Vergers, with short silver wands; next them, two <b epub:type="z3998:persona">Scribes</b>, in the habit of doctors; after them, <b epub:type="z3998:persona">CANTERBURY</b> alone; after him, <b epub:type="z3998:persona">LINCOLN</b>, Ely, Rochester, and Saint Asaph; next them, with some small distance, follows a Gentleman bearing the purse, with the great seal, and a cardinal’s hat; then two Priests, bearing each a silver cross; then a Gentleman-usher bare-headed, accompanied with a <b epub:type="z3998:persona">Sergeant-at-arms</b> bearing a silver mace; then two <b epub:type="z3998:persona">Gentlemen</b> bearing two great silver pillars; after them, side by side, <b epub:type="z3998:persona">Cardinal Wolsey</b> and <b epub:type="z3998:persona">Cardinal Campeius</b>; two Noblemen with the sword and mace. <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> takes place under the cloth of state; <b epub:type="z3998:persona">Cardinal Wolsey</b> and <b epub:type="z3998:persona">Cardinal Campeius</b> sit under him as judges. <b epub:type="z3998:persona">Queen Katherine</b> takes place some distance from <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b>. The Bishops place themselves on each side the court, in manner of a consistory; below them, the <b epub:type="z3998:persona">Scribes</b>. The Lords sit next the Bishops. The rest of the Attendants stand in convenient order about the stage.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1655,7 +1655,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>What’s the need?</span>
@@ -1678,10 +1678,10 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Crier</td>
-							<td>Henry King of England, etc.</td>
+							<td>Henry King of England, <abbr>etc.</abbr></td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Here.</td>
 						</tr>
 						<tr>
@@ -1690,12 +1690,12 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Crier</td>
-							<td>Katharine Queen of England, etc.</td>
+							<td>Katharine Queen of England, <abbr>etc.</abbr></td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Queen Katherine</b> makes no answer, rises out of her chair, goes about the court, comes to <b epub:type="z3998:persona">King Henry VIII</b>, and kneels at his feet; then speaks.</i>
+								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Queen Katherine</b> makes no answer, rises out of her chair, goes about the court, comes to <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b>, and kneels at his feet; then speaks.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1982,7 +1982,7 @@
 									<br/>
 									<span>To bring my whole cause “fore his holiness,</span>
 									<br/>
-									<span>And to be judged by him. <i epub:type="z3998:stage-direction">She curtsies to <b epub:type="z3998:persona">King Henry VIII</b>, and offers to depart.</i></span>
+									<span>And to be judged by him. <i epub:type="z3998:stage-direction">She curtsies to <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b>, and offers to depart.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -2001,7 +2001,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Call her again.</td>
 						</tr>
 						<tr>
@@ -2031,12 +2031,12 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Go thy ways, Kate:</span>
 									<br/>
-									<span>That man i” the world who shall report he has</span>
+									<span>That man <span epub:type="z3998:roman">i</span>” the world who shall report he has</span>
 									<br/>
 									<span>A better wife, let him in nought be trusted,</span>
 									<br/>
@@ -2091,7 +2091,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>My lord cardinal,</span>
@@ -2211,7 +2211,7 @@
 							<td>Very well, my liege.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>I have spoke long: be pleased yourself to say</span>
@@ -2241,7 +2241,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>I then moved you,</span>
@@ -2293,7 +2293,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span><i epub:type="z3998:stage-direction">Aside.</i> I may perceive</span>
