--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -621,7 +621,7 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">II</span>
 				</h3>
-				<p>Ante-chamber to <b epub:type="z3998:persona">King Henry VIII’s</b> apartment.</p>
+				<p>Ante-chamber to <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span>’s</b> apartment.</p>
 				<table>
 					<tbody>
 						<tr>
@@ -1123,7 +1123,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">King Henry VIII</b>, reading of a schedule, and <b epub:type="z3998:persona">Lovell</b>.</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b>, reading of a schedule, and <b epub:type="z3998:persona">Lovell</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1131,7 +1131,7 @@
 							<td>The king, the king!</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>What piles of wealth hath he accumulated</span>
@@ -1171,7 +1171,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>It may well be;</span>
@@ -1209,7 +1209,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>If we did think</span>
@@ -1222,7 +1222,7 @@
 									<br/>
 									<span>His thinkings are below the moon, not worth</span>
 									<br/>
-									<span>His serious considering. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">King HENRY VIII</b> takes his seat; whispers <b epub:type="z3998:persona">Lovell</b>, who goes to <b epub:type="z3998:persona">Cardinal Wolsey</b>.</i></span>
+									<span>His serious considering. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">King HENRY <span epub:type="z3998:roman">VIII</span></b> takes his seat; whispers <b epub:type="z3998:persona">Lovell</b>, who goes to <b epub:type="z3998:persona">Cardinal Wolsey</b>.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1237,7 +1237,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Good my lord,</span>
@@ -1279,7 +1279,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>You have said well.</td>
 						</tr>
 						<tr>
@@ -1295,7 +1295,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>’Tis well said again;</span>
@@ -1327,7 +1327,7 @@
 							<td><i epub:type="z3998:stage-direction">Aside.</i> The Lord increase this business!</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Have I not made you,</span>
@@ -1377,7 +1377,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Fairly answer’d;</span>
@@ -1433,7 +1433,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>’Tis nobly spoken:</span>
@@ -1444,7 +1444,7 @@
 									<br/>
 									<span>And after, this: and then to breakfast with</span>
 									<br/>
-									<span>What appetite you have. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">King Henry VIII</b>, frowning upon <b epub:type="z3998:persona">Cardinal Wolsey</b>: the Nobles throng after him, smiling and whispering.</i></span>
+									<span>What appetite you have. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b>, frowning upon <b epub:type="z3998:persona">Cardinal Wolsey</b>: the Nobles throng after him, smiling and whispering.</i></span>
 								</p>
 							</td>
 						</tr>
