--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -224,11 +224,11 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">King Henry VIII</b> and <b epub:type="z3998:persona">Suffolk</b>.</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> and <b epub:type="z3998:persona">Suffolk</b>.</i>
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Charles, I will play no more tonight;</span>
@@ -242,7 +242,7 @@
 							<td>Sir, I did never win of you before.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>But little, Charles;</span>
@@ -270,7 +270,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>What say’st thou, ha?</span>
@@ -290,7 +290,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Alas, good lady!</td>
 						</tr>
 						<tr>
@@ -306,7 +306,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>’Tis midnight, Charles;</span>
@@ -334,7 +334,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Charles, good night. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Suffolk</b>.</i></td>
 						</tr>
 						<tr>
@@ -358,7 +358,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Ha! Canterbury?</td>
 						</tr>
 						<tr>
@@ -366,7 +366,7 @@
 							<td>Ay, my good lord.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>’Tis true: where is he, Denny?</td>
 						</tr>
 						<tr>
@@ -390,7 +390,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Avoid the gallery. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Lovell</b> seems to stay.</i></span>
@@ -410,7 +410,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>How now, my lord! you desire to know</span>
@@ -430,7 +430,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Pray you, arise,</span>
@@ -494,7 +494,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Stand up, good Canterbury:</span>
@@ -536,7 +536,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Know you not</span>
@@ -584,7 +584,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Be of good cheer;</span>
@@ -648,7 +648,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Now, by thy looks</span>
@@ -680,7 +680,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Lovell!</td>
 						</tr>
 						<tr>
@@ -688,7 +688,7 @@
 							<td>Sir?</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Give her an hundred marks. I’ll to the queen. <i epub:type="z3998:stage-direction">Exit.</i></td>
 						</tr>
 						<tr>
@@ -717,7 +717,7 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">II</span>
 				</h3>
-				<p>Before the council-chamber. Pursuivants, Pages, etc. attending.</p>
+				<p>Before the council-chamber. Pursuivants, Pages, <abbr>etc.</abbr> attending.</p>
 				<table>
 					<tbody>
 						<tr>
@@ -815,7 +815,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter the <b epub:type="z3998:persona">King Henry VIII</b> and <b epub:type="z3998:persona">Doctor Butts</b> at a window above.</i>
+								<i epub:type="z3998:stage-direction">Enter the <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> and <b epub:type="z3998:persona">Doctor Butts</b> at a window above.</i>
 							</td>
 						</tr>
 						<tr>
@@ -823,7 +823,7 @@
 							<td>I’ll show your grace the strangest sight⁠—</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>What’s that, Butts?</td>
 						</tr>
 						<tr>
@@ -831,7 +831,7 @@
 							<td>I think your highness saw this many a day.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Body o” me, where is it?</td>
 						</tr>
 						<tr>
@@ -849,7 +849,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Ha! ’tis he, indeed:</span>
@@ -1396,7 +1396,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>You were ever good at sudden commendations,</span>
@@ -1430,7 +1430,7 @@
 							<td>May it please your grace⁠—</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>No, sir, it does not please me.</span>
@@ -1484,7 +1484,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Well, well, my lords, respect him;</span>
@@ -1524,7 +1524,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Come, come, my lord, you’ld spare your spoons: you</span>
@@ -1560,7 +1560,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Good man, those joyful tears show thy true heart:</span>
@@ -1900,7 +1900,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter trumpets, sounding; then two Aldermen, Lord Mayor, <b epub:type="z3998:persona">Garter</b>, <b epub:type="z3998:persona">Cranmer</b>, <b epub:type="z3998:persona">Norfolk</b> with his marshal’s staff, <b epub:type="z3998:persona">Suffolk</b>, two Noblemen bearing great standing-bowls for the christening-gifts; then four Noblemen bearing a canopy, under which the Duchess of Norfolk, godmother, bearing the child richly habited in a mantle, etc., train borne by a Lady; then follows the Marchioness Dorset, the other godmother, and Ladies. The troop pass once about the stage, and <b epub:type="z3998:persona">Garter</b> speaks.</i>
+								<i epub:type="z3998:stage-direction">Enter trumpets, sounding; then two Aldermen, Lord Mayor, <b epub:type="z3998:persona">Garter</b>, <b epub:type="z3998:persona">Cranmer</b>, <b epub:type="z3998:persona">Norfolk</b> with his marshal’s staff, <b epub:type="z3998:persona">Suffolk</b>, two Noblemen bearing great standing-bowls for the christening-gifts; then four Noblemen bearing a canopy, under which the Duchess of Norfolk, godmother, bearing the child richly habited in a mantle, <abbr>etc.</abbr>, train borne by a Lady; then follows the Marchioness Dorset, the other godmother, and Ladies. The troop pass once about the stage, and <b epub:type="z3998:persona">Garter</b> speaks.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1910,7 +1910,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Flourish. Enter <b epub:type="z3998:persona">King Henry VIII</b> and Guard.</i>
+								<i epub:type="z3998:stage-direction">Flourish. Enter <b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> and Guard.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1930,7 +1930,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Thank you, good lord archbishop:</span>
@@ -1944,10 +1944,10 @@
 							<td>Elizabeth.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Stand up, lord. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">King Henry VIII</b> kisses the child.</i></span>
+									<span>Stand up, lord. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></b> kisses the child.</i></span>
 									<br/>
 									<span>With this kiss take my blessing: God protect thee!</span>
 									<br/>
@@ -1960,7 +1960,7 @@
 							<td>Amen.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>My noble gossips, ye have been too prodigal:</span>
@@ -2062,7 +2062,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td>Thou speakest wonders.</td>
 						</tr>
 						<tr>
@@ -2086,7 +2086,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">King Henry VIII</td>
+							<td epub:type="z3998:persona">King Henry <span epub:type="z3998:roman">VIII</span></td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>O lord archbishop,</span>
