--- a/src/epub/text/dramatis-personae.xhtml
+++ b/src/epub/text/dramatis-personae.xhtml
@@ -19,7 +19,7 @@
 					<p>Cardinal Campeius</p>
 				</li>
 				<li>
-					<p>Capucius, Ambassador from the Emperor Charles V</p>
+					<p>Capucius, Ambassador from the Emperor Charles <span epub:type="z3998:roman">V</span></p>
 				</li>
 				<li>
 					<p>Cranmer, Archbishop of Canterbury</p>
